# tidygen

./: .gitignore  README.md  pyproject.toml
examples/test/core/: operation.py
src/tidygen/: app.py  common.py  core.py  data.py  main.py  utils.py
